# mentor_website

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package-lock.json
.github/: CODEOWNERS
backend/: manage.py  pyproject.toml
backend/config/settings/: development.py  production.py  settings.py
backend/domains/api/: apps.py
backend/domains/blogs/domain/entities/: article.py  category.py  comment.py  tag.py
backend/domains/blogs/domain/value_objects/: article.py  category.py  comment.py  tag.py
backend/domains/blogs/infrastructure/: apps.py
backend/domains/custom_admin/: apps.py  urls.py
backend/domains/landing/: apps.py
backend/domains/users/: apps.py
backend/src/apps/custom_admin/: apps.py
backend/src/apps/landing/: urls.py
backend/src/config/: settings.py
frontend/: package-lock.json
frontend/src/: App.js
src/apps/blogs/: urls.py
src/apps/users/: urls.py
static/: staticwillbehere
